syntax = "proto3";
package sequencer.crypto.arweave;

import "gogoproto/gogo.proto";

option go_package = "github.com/warp-contracts/sequencer/crypto/keys/arweave";

message PubKey {
  bytes key = 1;
}

message PrivKey {
  bytes key = 1;
}
