syntax = "proto3";

package sequencer.sequencer;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";

option go_package = "github.com/warp-contracts/sequencer/x/sequencer/types";

// Msg defines the Msg service.
service Msg { rpc DataItem(MsgDataItem) returns (MsgDataItemResponse); }

message MsgDataItem {
  bytes data_item = 1 [
    (gogoproto.customtype) =
        "github.com/warp-contracts/syncer/src/utils/bundlr.BundleItem",
    (gogoproto.nullable) = false
  ];
}

message MsgDataItemResponse {}
